--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 .my-container {
-  @apply mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl;
+  @apply mx-auto p-3 md:p-6 sm:max-w-xl md:max-w-full lg:max-w-screen-xl;
 }
 
 .btn {
-  @apply inline-flex items-center lg:h-12 md:h-11 h-10 lg:px-6 md:px-4 px-3 mb-3 font-medium text-white transition duration-200 rounded shadow-md md:mb-0 bg-blue-400 hover:bg-blue-700;
+  @apply inline-flex items-center lg:h-12 md:h-11 h-10 lg:px-6 md:px-4 px-3 py-3  mb-3 font-medium text-white transition duration-200 rounded shadow-md md:mb-0 bg-gradient-to-r from-blue-500 to-purple-400 hover:from-purple-400 hover:to-blue-500;
 }
 
 .badge {
