--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 .btn {
-  @apply inline-flex items-center lg:h-12 md:h-11 h-10 lg:px-6 md:px-4 px-3 py-3  mb-3 font-medium text-white transition duration-200 rounded shadow-md md:mb-0 bg-gradient-to-r from-blue-500 to-purple-400 hover:from-purple-400 hover:to-blue-500;
+  @apply inline-flex items-center  lg:px-6 md:px-4 px-3 lg:py-3 py-2  mb-3 font-medium text-white transition rounded shadow-md md:mb-0 bg-gradient-to-r from-blue-500 to-purple-400 hover:from-purple-400 hover:to-blue-500 duration-700;
 }
 
 .badge {
